2009-01-21  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.23 released.

2009-01-20 18:49 -0500 [r169581]  Terry Wilson <twilson@digium.com>

	* One-touch parking was calling back the wrong channel on timeout

2009-01-20 13:40 -0500 [r169485]  Terry Wilson <twilson@digium.com>

	* Don't play audio to the channel if we've masqueraded  (closes 
	  issue #14066) Reported by: bluefox Tested by: otherwiseguy, 
	  bluefox

2009-01-16  Russell Bryant <russell@digium.com>

	* Asterisk 1.4.23-rc4 released.

2009-01-16 00:19 +0000 [r168745]  Steve Murphy <murf@digium.com>

	* pbx/pbx_ael.c: This patch fixes a problem where a goto (or jump,
	  in this case) fails a consistency check because it can't find a
	  matching extension. The problem was a missing instruction to end
	  the range notation in the code where it converts the pattern into
	  a regex and uses the regex code to determine the match. I tested
	  using the AEL code the user supplied, and now, the consistency
	  check passes. (closes issue #14141) Reported by: dimas

2009-01-15 18:43 +0000 [r168721]  Olle Johansson <oej@edvina.net>

	* configs/extconfig.conf.sample: Meetme actually has realtime but
	  wasn't documented

2009-01-15 18:22 +0000 [r168716]  Terry Wilson <twilson@digium.com>

	* res/res_features.c: Convert call to park_call_full to
	  masq_park_call_announce Since we removed the AST_PBX_KEEPALIVE
	  return value, we need to use masqueraded parking, otherwise we
	  will try to call ast_hangup() in __pbx_run() and in
	  do_parking_thread() and then promptly crash. (closes issue
	  #14215) Reported by: waverly360 Tested by: otherwiseguy (closes
	  issue #14228) Reported by: kobaz Tested by: otherwiseguy

2009-01-15 01:20 +0000 [r168633]  Tilghman Lesher <tlesher@digium.com>

	* /: Blocked revision 168632 from /branches/1.2: 1.2 regression on
	  security fix AST-2009-001 (Closes issue #14238)

2009-01-15 00:11 +0000 [r168628]  Mark Michelson <mmichelson@digium.com>
